--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             </form>
 
             <div id="asset-sentiment-container">
-               <h4>Sentiment Log</h4>
+               <h4>Sentiment Log 👀</h4>
                 <div class="sentiment-trackers-wrapper">
                     <div class="sentiment-tracker" id="sentiment-tracker-btc">
                         <h4>BTC/USDT</h4>
