--- a/index.html
+++ b/index.html
@@ -1143,8 +1143,7 @@
                                 <td>${parseFloat(trade.exit_price).toFixed(2)}</td>
                                 <td>${totalFees.toFixed(2)}</td>
                                 <td style="color:${resultColor};font-weight:bold;">${parseFloat(trade.net_result).toFixed(2)}</td>
-                                <td>${trade.date}</td>
-                                <td>${trade.closed_date ? new Date(trade.closed_date).toLocaleString() : '--'}</td>
+<td>${trade.date ? new Date(trade.date).toLocaleString() : '--'}</td>                                <td>${trade.closed_date ? new Date(trade.closed_date).toLocaleString() : '--'}</td>
                                 <td class="note-cell" title="${noteText}">${noteText}</td>
                                 ${masterButtonsHtml(id)}
                             </tr>`;
