--- a/index.html
+++ b/index.html
@@ -662,10 +662,10 @@
             text-overflow: ellipsis;
         }
 
-        .edit-caption-btn {
+       .edit-caption-btn {
             position: absolute;
-            bottom: 8px;
-            right: 8px;
+            top: 8px;   /* MOVED to top */
+            left: 8px;  /* MOVED to left */
             width: 28px;
             height: 28px;
             border-radius: 50%;
