--- a/index.html
+++ b/index.html
@@ -699,6 +699,58 @@
             line-height: 1.4;
             max-width: 80vw;
         }
+
+
+
+
+
+
+
+
+                /* --- Replace the old rules with these corrected ones --- */
+
+        .library-image-wrapper {
+            position: relative;
+            border: 1px solid var(--border-color);
+            padding: 5px;
+            background: var(--container-bg);
+            border-radius: 4px;
+            /* Adjusting aspect ratio to be slightly taller to better accommodate captions */
+            aspect-ratio: 4 / 3; 
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .library-image-caption {
+            font-size: 12px;
+            line-height: 1.4; /* Improves readability for wrapped text */
+            color: var(--subtle-text);
+            padding: 4px;
+            text-align: center;
+            /* REMOVED white-space: nowrap to allow wrapping */
+            /* The parent flex container handles the rest */
+        }
+
+        .edit-caption-btn {
+            position: absolute;
+            top: 8px;
+            left: 8px;
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            background-color: rgba(0, 123, 255, 0.85); /* Blue */
+            border: 1px solid rgba(255,255,255,0.4);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 10;
+            transition: all 0.2s ease-in-out;
+            opacity: 0;
+            padding: 0;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+        }
     </style>
 </head>
 <body>
