--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@
             cursor: pointer;
         }
 
+        /* NEW: Style for the comment cell */
+        .setups-table .comment-cell {
+            white-space: normal;
+            min-width: 200px;
+            text-align: left;
+        }
+
         .setups-container {
             margin-bottom: 30px; 
             border: 1px solid var(--border-color);
@@ -886,6 +893,7 @@
                                 <th rowspan="2">Support</th>
                                 <th rowspan="2">Resistance</th>
                                 <th rowspan="2">Colour</th>
+                                <th rowspan="2">Comment</th>
                             </tr>
                             <tr>
                                 <th>Entry</th>
@@ -897,15 +905,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
+                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -930,6 +938,7 @@
                                 <th rowspan="2">Support</th>
                                 <th rowspan="2">Resistance</th>
                                 <th rowspan="2">Colour</th>
+                                <th rowspan="2">Comment</th>
                             </tr>
                             <tr>
                                 <th>Entry</th>
@@ -941,15 +950,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
-                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td></tr>
+                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
+                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="color-cell"></td><td class="comment-cell"></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -1647,6 +1656,8 @@
                     const savedColor = rowData.color || '';
                     colorCell.dataset.color = savedColor;
                     colorCell.style.backgroundColor = colorMap[savedColor] || 'transparent';
+
+                    cells[9].textContent = rowData.comment || '';
                 });
             }
             
@@ -1735,7 +1746,8 @@
                         four_stoploss: cells[5].textContent.trim(),
                         support: cells[6].textContent.trim(),
                         resistance: cells[7].textContent.trim(),
-                        color: cells[8].dataset.color || ''
+                        color: cells[8].dataset.color || '',
+                        comment: cells[9].textContent.trim()
                     };
                 });
                 
@@ -2316,6 +2328,8 @@
 
                 cell.dataset.color = newColor;
                 cell.style.backgroundColor = colorMap[newColor];
+
+                // REMOVED: Auto-save logic is no longer here.
             }
 
 
