--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@
                 SNAPSHOT_TIMEFRAMES: ['15min', '30min', '1hour', '2hour', '4hour', 'daily', 'weekly', 'monthly']
             };
             
-            const CL2_FOLDERS = ['monthly', 'weekly', 'daily', '4hour', '2hour', '1hour', '30min', '15min'];
+const CL2_FOLDERS = ['monthly', 'weekly', 'daily', '4hour', '2hour', '1hour', '30min', '15min', '5min'];
 
             // --- DOM ELEMENT CACHE ---
             const DOM = {
